--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   shared_preferences: ^2.0.5
 
   url_launcher: ^6.0.3
+  flutter_colorpicker: ^0.4.0
 
 dev_dependencies:
   flutter_test:
