--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   url_launcher: ^6.0.3
 
   flutter_colorpicker: ^0.4.0
+  google_fonts: ^2.0.0
 
 dev_dependencies:
   flutter_test:
