--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: scoreboard_tn
-description: My flutter version of a Scoreboard application
+name: scoreboard_tn2
+description: A flutter version of a Scoreboard application
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -29,7 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   # cupertino_icons: ^1.0.2
 
-  font_awesome_flutter: ^9.0.0
+  font_awesome_flutter: ^10.1.0
 
   flutter_material_pickers: ^3.1.2
 
@@ -37,7 +37,7 @@ dependencies:
 
   url_launcher: ^6.0.3
 
-  flutter_colorpicker: ^0.6.0
+  flutter_colorpicker: ^1.0.3
   google_fonts: ^2.0.0
 
 dev_dependencies:
