--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
 
   shared_preferences: ^2.0.5
 
-  url_launcher: ^6.0.3
+  url_launcher: ^6.1.5
+
+  http: ^0.13.4
 
   flutter_colorpicker: ^1.0.3
   google_fonts: ^2.0.0
